syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.watchtogether.roomservice.grpc";
option java_outer_classname = "RoomServiceProto";

//package room;

service RoomService {
  // Получение комнаты по ID
  rpc GetRoomById (RoomIdRequest) returns (RoomResponse) {}

  // Получение всех комнат
  rpc GetAllRooms (Empty) returns (RoomListResponse) {}

  // Получение комнат по категории
  rpc GetRoomsByCategory (CategoryRequest) returns (RoomListResponse) {}

  // Создание новой комнаты
  rpc CreateRoom (CreateRoomRequest) returns (RoomResponse) {}

  // Обновление существующей комнаты
  rpc UpdateRoom (UpdateRoomRequest) returns (RoomResponse) {}
}

// ========== Основные модели ==========

message Room {
  string id = 1;               // UUID комнаты
  string name = 2;              // Название комнаты
  string description = 3;       // Описание комнаты
  RoomType type = 4;            // Тип комнаты
  RoomCategory category = 5;    // Категория комнаты
//  string password_hash = 6;     // Хеш пароля (опционально)
  int32 max_participants = 6;   // Максимальное количество участников
  string owner_id = 7;          // UUID владельца комнаты
}

enum RoomType {
  PUBLIC = 0;     // Публичная комната
  PRIVATE = 1;    // Приватная комната
//  PASSWORD = 2;   // Комната с паролем
}

enum RoomCategory {
  MOVIES = 0;
  SERIES = 1;
  ANIME = 2;
  MUSIC = 3;
  GAMING = 4;
  EDUCATION = 5;
  SPORTS = 6;
  STAND_UP = 7;
  KIDS = 8;
  ART = 9;
  TRAVEL = 10;
  COOKING = 11;
  FASHION = 12;
  LIVE = 13;
  TESTING = 14;
  SOCIAL = 15;
  OTHER = 16;
  NONE = 17;      // Другое
}

// ========== Запросы и ответы ==========

message RoomIdRequest {
  string room_id = 1;  // UUID запрашиваемой комнаты
}

message CategoryRequest {
  string category = 1;  // Название категории для фильтрации
}

message CreateRoomRequest {
  string name = 1;
  string description = 2;
  RoomType type = 3;
  RoomCategory category = 4;
  string password = 5;         // Пароль в открытом виде (для комнат с паролем)
  int32 max_participants = 6;
  string owner_id = 7;         // UUID создателя комнаты
}

message UpdateRoomRequest {
  string room_id = 1;
  string name = 2;
  string description = 3;
  RoomType type = 4;
  RoomCategory category = 5;
  string owner_id = 6;         // UUID пользователя, инициирующего обновление
}

message RoomResponse {
  Room room = 1;              // Основные данные комнаты
  bool success = 2;           // Флаг успешности операции
  string error_message = 3;   // Сообщение об ошибке (если success=false)
}

message RoomListResponse {
  repeated Room rooms = 1;    // Список комнат
  bool success = 2;
  string error_message = 3;
}

message Empty {}